force-app/main/default/objects/WhatsApp_Template__c/WhatsApp_Template__c.object-meta.xml
<CustomObject>
    <label>WhatsApp Template</label>
    <nameField>
        <label>WhatsApp Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WhatsApp Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>