force-app/main/default/objects/WhatsApp_Template__c/fields/language__c.field-meta.xml
<CustomField>
    <fullName>language__c</fullName>
    <label>language</label>
    <length>20</length>
    <type>Text</type>
</CustomField>