force-app/main/default/objects/WhatsApp_Template__c/fields/Meta_Template_ID__c.field-meta.xml
<CustomField>
    <fullName>Meta_Template_ID__c</fullName>
    <label>Meta Template ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>