force-app/main/default/objects/WhatsApp_Template__c/fields/Parameter_Format__c.field-meta.xml
<CustomField>
    <fullName>Parameter_Format__c</fullName>
    <label>Parameter_Format</label>
    <length>50</length>
    <type>Text</type>
</CustomField>