force-app/main/default/objects/WhatsApp_Template__c/fields/Parameters__c.field-meta.xml
<CustomField>
    <fullName>Parameters__c</fullName>
    <label>Parameters</label>
    <length>144</length>
    <type>Text</type>
</CustomField>