force-app/main/default/objects/WhatsApp_Template__c/fields/Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Template_Name__c</fullName>
    <description>Used for storing the template name</description>
    <label>Template Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>