force-app/main/default/objects/WhatsApp_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Template_Name__c</columns>
    <columns>language__c</columns>
    <columns>Parameters__c</columns>
    <columns>Parameter_Format__c</columns>
    <columns>Template_Body__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>